--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,7 +11,7 @@
     .type {
         margin-top: 30px;
         color: var(--red);
-
+        text-shadow: 1px 1px 7px var(--red);
         .text {
             margin-right: 30px;
         }
