--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,7 @@
 .intro-container {
     height: calc(100vh - 200px);
     font-size: 50px;
+    text-shadow: 1px 1px 4px white;
 
     .name {
         font-size: 90px;
