--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -44,9 +44,31 @@
     }
 }
 
+@media only screen and (max-width: 1200px) {
+    .intro-container {
+        font-size: 25px;
+        padding: 20px !important;
+
+        .name {
+            font-size: 40px;
+            font-weight: bold;
+            line-height: 20px;
+        }
+
+        .type {
+            margin-top: 10px;
+            font-size: 20px;
+            .text {
+                margin-right: 10px;
+            }
+        }
+    }
+}
+
+
 @media only screen and (max-width: 600px) {
     .intro-container {
-        font-size: 20px;
+        font-size: 25px;
         padding: 20px !important;
 
         .name {
