--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,3 +1,8 @@
+.header-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 .company-icon {
     width: 45x;
     height: 45px;
@@ -25,12 +30,6 @@
     font-size: 1.2rem;
 }
 
-.notes {
-    margin-left: 20px;
-    font-style: italic;
-    opacity: 0.7;
-}
-
 .time-slot-dates {
     font-size: 0.77rem;
     margin-top: 3px;
@@ -43,4 +42,24 @@
 .astress {
     color: var(--red);
     font-size: 0.9rem;
+}
+
+.external-link {
+    text-decoration: none;
+    color: var(--red);
+}
+
+.tech-icon {
+    height: 25px;
+    margin-right: 10px;
+}
+
+@media only screen and (max-width: 450px) { 
+    .header-container {
+        display: block;
+    }
+
+    .tech-icon {
+        height: 15;
+    }
 }
